--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,11 +1,13 @@
 name: ci
-"on":
+'on':
   push:
     branches:
       - main
       - develop
-  pull_request
-  
+  pull_request:
+    branches:
+      - main
+      - develop
 jobs:
   all-cli-check:
     runs-on: ubuntu-latest
