--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
     "@hookform/resolvers": "^2.8.2",
+    "@mantine/core": "^3.1.0",
+    "@mantine/hooks": "^3.1.0",
     "@mantine/notifications": "^3.1.0",
     "@mui/lab": "^5.0.0-alpha.53",
     "@mui/material": "^5.0.6",
@@ -51,8 +53,8 @@
     "cuid": "^2.1.8",
     "jotai": "^1.4.2",
     "lodash.omit": "^4.5.0",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.18.0",
     "react-query": "^3.29.0",
@@ -83,7 +85,7 @@
     "@types/react-router-dom": "^5.3.2",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@typescript-eslint/parser": "^5.2.0",
-    "@vitejs/plugin-react": "^1.0.0",
+    "@vitejs/plugin-react": "^1.0.7",
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "autoprefixer": "^10.4.0",
     "cross-env": "^7.0.3",
@@ -99,7 +101,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "faker": "^5.5.3",
     "history": "^5.0.1",
-    "husky": "^7.0.0",
+    "husky": "^7.0.4",
     "jest": "^27.3.1",
     "jest-axe": "^5.0.1",
     "jest-runner-eslint": "^1.0.0",
@@ -108,10 +110,10 @@
     "postcss": "^8.3.11",
     "prettier": "^2.4.1",
     "start-server-and-test": "^1.14.0",
-    "tailwindcss": "^2.2.17",
+    "tailwindcss": "^2.2.19",
     "ts-node": "^10.4.0",
-    "typescript": "^4.3.2",
-    "vite": "^2.6.4",
+    "typescript": "^4.4.4",
+    "vite": "^2.6.13",
     "web-vitals": "^2.1.2"
   }
 }
