fix broken jest cmd in ci.yml #3

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
       - run: npm run format
       - run: npm run check-format
       - run: npm run lint
-      - run: npm test:jest
+      - run: npm run test:jest
       - run: npm run build
   cypress-run:
     runs-on: ubuntu-latest
