change vite preview port to 3000 #3

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "serve": "vite preview",
+    "serve": "vite preview --port 3000",
     "prepare": "husky install",
     "start:cli": "cross-env BROWSER=none vite --mode test",
     "test:jest": "jest",
