--- a/package.json
+++ b/package.json
@@ -44,13 +44,16 @@
     "@emotion/styled": "^11.3.0",
     "@hookform/resolvers": "^2.8.2",
     "@mantine/core": "^3.1.0",
+    "@mantine/dates": "^3.1.0",
     "@mantine/hooks": "^3.1.0",
     "@mantine/notifications": "^3.1.0",
+    "@modulz/radix-icons": "^4.0.0",
     "@mui/lab": "^5.0.0-alpha.53",
     "@mui/material": "^5.0.6",
     "axios": "^0.24.0",
     "clsx": "^1.1.1",
     "cuid": "^2.1.8",
+    "dayjs": "^1.10.7",
     "jotai": "^1.4.2",
     "lodash.omit": "^4.5.0",
     "react": "^17.0.2",
